--- a/src/test/resources/jmeter-analysis-maven-plugin-it-run/pom.xml
+++ b/src/test/resources/jmeter-analysis-maven-plugin-it-run/pom.xml
@@ -14,6 +14,8 @@
 
   <description>
     Runs the analysis of a JMeter maven results file
+
+    Invoke with "mvn clean verify"
   </description>
 
   <build>
