--- a/jmeter-analysis-maven-plugin-it/src/test/resources/jmeter-analysis-maven-plugin-it-run/pom.xml
+++ b/jmeter-analysis-maven-plugin-it/src/test/resources/jmeter-analysis-maven-plugin-it-run/pom.xml
@@ -5,9 +5,13 @@
 
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <groupId>com.lazerycode.jmeter</groupId>
+    <artifactId>jmeter-analysis-maven-plugin-it-parent</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
+
   <artifactId>jmeter-analysis-maven-plugin-it-run</artifactId>
-  <groupId>com.lazerycode.jmeter</groupId>
-  <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <url>http://jmeter.lazerycode.com</url>
@@ -23,7 +27,6 @@
       <plugin>
         <groupId>${project.groupId}</groupId>
         <artifactId>jmeter-analysis-maven-plugin</artifactId>
-        <version>${project.version}</version>
         <executions>
           <execution>
             <goals>
@@ -80,14 +83,5 @@
 
     </plugins>
   </build>
-
-
-  <!-- in case we want to use a SNAPSHOT version of the jmeter-analysis-maven-plugin -->
-    <pluginRepositories>
-      <pluginRepository>
-        <id>sonatype-snapshots</id>
-        <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-      </pluginRepository>
-    </pluginRepositories>
 
 </project>
