--- a/pom.xml
+++ b/pom.xml
@@ -5,41 +5,62 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>jmeter-analysis-maven-plugin-it</artifactId>
+  <artifactId>jmeter-analysis-maven-plugin-it-parent</artifactId>
   <groupId>com.lazerycode.jmeter</groupId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
 
   <description>
-    Executes integration tests for the jmeter-analysis-maven-plugin.
+    Parent of jmeter-analysis-maven-plugin integration tests.
 
-    Invoke with "mvn clean verify"
+    Invoke with "mvn clean install".
   </description>
+
+  <properties>
+    <default.encoding>UTF-8</default.encoding>
+    <jmeter.analysis.maven.plugin.version>1.0-SNAPSHOT</jmeter.analysis.maven.plugin.version>
+  </properties>
+
+  <modules>
+    <module>jmeter-analysis-maven-plugin-it</module>
+  </modules>
 
   <build>
     <pluginManagement>
       <plugins>
+
+        <!-- configure plugin versions -->
+        <plugin>
+          <groupId>${project.groupId}</groupId>
+          <artifactId>jmeter-analysis-maven-plugin</artifactId>
+          <version>${jmeter.analysis.maven.plugin.version}</version>
+        </plugin>
+
         <!-- set default encoding for compilation -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>2.4</version>
           <configuration>
-            <encoding>UTF-8</encoding>
+            <encoding>${default.encoding}</encoding>
           </configuration>
         </plugin>
+
         <!-- set default encoding for reading and writing files -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
           <version>2.5</version>
           <configuration>
-            <encoding>UTF-8</encoding>
+            <encoding>${default.encoding}</encoding>
           </configuration>
         </plugin>
+
       </plugins>
     </pluginManagement>
-    </build>
+  </build>
 
+  <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>org.apache.maven.shared</groupId>
@@ -47,5 +68,14 @@
         <version>1.3</version>
       </dependency>
     </dependencies>
+  </dependencyManagement>
+
+  <!-- in case we want to use a SNAPSHOT version of the jmeter-maven-plugin -->
+  <pluginRepositories>
+    <pluginRepository>
+      <id>sonatype-snapshots</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+    </pluginRepository>
+  </pluginRepositories>
 
 </project>
