--- a/jmeter-analysis-maven-plugin-it/src/test/resources/jmeter-analysis-maven-plugin-it-run/pom.xml
+++ b/jmeter-analysis-maven-plugin-it/src/test/resources/jmeter-analysis-maven-plugin-it-run/pom.xml
@@ -57,12 +57,12 @@
               If set to true, additional files "<category>-sizes.csv" and "<category>-durations.csv" will be stored.
               These files contain detailed information for response size and response durations for every URI.
               -->
-              <details>true</details>
+              <generateCSVs>true</generateCSVs>
 
               <!--
               If set to true, additional chart files "<category>-durations.png" will be created.
               -->
-              <charts>true</charts>
+              <generateCharts>true</generateCharts>
 
               <!--
               Mapping from resource URL to file name. Every resource will be downloaded and stored in 'targetDirectory'
