--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <artifactId>jmeter-analysis-maven-plugin-it-parent</artifactId>
   <groupId>com.lazerycode.jmeter</groupId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>pom</packaging>
 
   <description>
