--- a/jmeter-analysis-maven-plugin-it/src/test/resources/jmeter-analysis-maven-plugin-it-run/pom.xml
+++ b/jmeter-analysis-maven-plugin-it/src/test/resources/jmeter-analysis-maven-plugin-it-run/pom.xml
@@ -8,7 +8,8 @@
   <parent>
     <groupId>com.lazerycode.jmeter</groupId>
     <artifactId>jmeter-analysis-maven-plugin-it-parent</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
+    <relativePath/>
   </parent>
 
   <artifactId>jmeter-analysis-maven-plugin-it-run</artifactId>
