--- a/jmeter-analysis-maven-plugin-it/pom.xml
+++ b/jmeter-analysis-maven-plugin-it/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>com.lazerycode.jmeter</groupId>
     <artifactId>jmeter-analysis-maven-plugin-it-parent</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
