--- a/jmeter-analysis-maven-plugin-it/src/test/resources/jmeter-analysis-maven-plugin-it-run-requestgroups/pom.xml
+++ b/jmeter-analysis-maven-plugin-it/src/test/resources/jmeter-analysis-maven-plugin-it-run-requestgroups/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>com.lazerycode.jmeter</groupId>
     <artifactId>jmeter-analysis-maven-plugin-it-parent</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.0.4-SNAPSHOT</version>
     <relativePath/>
   </parent>
 
@@ -51,20 +51,15 @@
               If there is no such mapping then the threadgroups from the jmeter.xml are used.
               -->
               <requestGroups>
-                <new>/en-US/firefox/new/</new>
-                <rest>/en-US/firefox/**</rest>
+                <requestGroup>
+                  <name>new</name>
+                  <pattern>/en-US/firefox/new/</pattern>
+                </requestGroup>
+                <requestGroup>
+                  <name>rest</name>
+                  <pattern>/en-US/firefox/**</pattern>
+                </requestGroup>
               </requestGroups>
-
-              <!--
-              If set to true, additional files "<category>-sizes.csv" and "<category>-durations.csv" will be stored.
-              These files contain detailed information for response size and response durations for every URI.
-              -->
-              <generateCSVs>true</generateCSVs>
-
-              <!--
-              If set to true, additional chart files "<category>-durations.png" will be created.
-              -->
-              <generateCharts>true</generateCharts>
 
               <!--
               Mapping from resource URL to file name. Every resource will be downloaded and stored in 'targetDirectory'
