log output of JMeter process

--- a/jmeter-analysis-maven-plugin-it/src/test/resources/jmeter-analysis-maven-plugin-it-run-preservedirs/pom.xml
+++ b/jmeter-analysis-maven-plugin-it/src/test/resources/jmeter-analysis-maven-plugin-it-run-preservedirs/pom.xml
@@ -47,6 +47,8 @@
 
               <preserveDirectories>true</preserveDirectories>
 
+              <!-- log output of JMeter process -->
+              <suppressJMeterOutput>false</suppressJMeterOutput>
               <!--
               Defines groups of requests by URL patterns,
               e.g. URIs starting with /mock/page are associated with group "pages". All analysis results are
